added lock and torch

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <script>
 
     // lock landscape orientation
-    // screen.orientation.lock('landscape')
-    // ScreenOrientation.lock('landscape')
+    //screen.orientation.lock('landscape')
+    ScreenOrientation.lock('landscape')
 
     function torch(on) {
 
